# chatgptcpp

./: .gitignore  CMakeLists.txt  README.md
examples/: rock_paper_scissors.cpp
include/chatgptcpp/: client.h
src/: client.cpp
tests/: test_client.cpp
